--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/federation": "^0.33.6",
-    "@apollo/gateway": "^0.43.1",
-    "@apollo/subgraph": "^0.1.4",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^9.1.1",
-    "@nestjs/platform-express": "^7.0.0",
-    "apollo-server-express": "^3.5.0",
-    "graphql": "^16.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0",
-    "@nestjs/config": "^1.0.3",
-    "@nestjs/typeorm": "^8.0.2",
-    "nanoid": "^3.1.30",
-    "pg": "^8.7.1",
-    "rimraf": "^3.0.2",
-    "typeorm": "^0.2.38",
+    "@apollo/federation": "^0.33.3",
+    "@apollo/gateway": "^0.42.3",
+    "@apollo/subgraph": "^0.1.2",
     "@grpc/grpc-js": "^1.4.2",
     "@grpc/proto-loader": "^0.6.6",
-    "@nestjs/microservices": "^8.1.2"
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.3",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.1",
+    "@nestjs/microservices": "^8.1.2",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-express": "^3.5.0",
+    "graphql": "^15.7.1",
+    "nanoid": "^3.1.30",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "tslib": "^2.0.0",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "13.1.4",
@@ -42,25 +43,24 @@
     "@nrwl/node": "13.1.4",
     "@nrwl/tao": "13.1.4",
     "@nrwl/workspace": "13.1.4",
+    "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "27.0.2",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "14.14.33",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.3.5",
-    "@nestjs/cli": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/graphql": "^14.5.0",
-    "@types/supertest": "^2.0.11",
-    "eslint-plugin-prettier": "^3.4.0",
     "supertest": "^6.1.3",
+    "ts-jest": "27.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "@types/nanoid": "^3.0.0"
+    "typescript": "~4.3.5"
   }
 }
