--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
+  "ignoreParameters": true,
+  "ignoreProperties": true,
   "plugins": ["@nrwl/nx"],
   "overrides": [
     {
